Fixes Issue #14331: Use significantly less stack space when importing modules by allocating path buffers on the heap instead of the stack.